--- a/book-api/build.gradle
+++ b/book-api/build.gradle
@@ -30,9 +30,17 @@ dependencies {
     	"org.springframework.boot:spring-boot-starter-web",
     	"org.springframework.boot:spring-boot-starter-data-jpa",
     	"org.springframework.boot:spring-boot-starter-data-redis",
-    	"org.springframework.boot:spring-boot-starter-security"
-    )
-    testCompile ("org.springframework.boot:spring-boot-starter-test")
+    	"org.springframework.boot:spring-boot-starter-security",
+    	"org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.2.RELEASE",
+    	"org.springframework.cloud:spring-cloud-starter-config:2.1.3.RELEASE",    	
+    	"org.springframework.session:spring-session-data-redis:2.1.8.RELEASE",
+    	"com.h2database:h2:1.4.199"
+    )    
+    testCompile (
+    	"org.springframework.boot:spring-boot-starter-test",
+    	"io.rest-assured:rest-assured:4.0.0",
+    	"org.hamcrest:hamcrest-all:1.3"
+    ) 
     compileOnly ("org.projectlombok:lombok:1.18.8")
 	annotationProcessor ("org.projectlombok:lombok:1.18.8")	
 }
