--- a/rating-api/build.gradle
+++ b/rating-api/build.gradle
@@ -30,9 +30,15 @@ dependencies {
     	"org.springframework.boot:spring-boot-starter-web",
     	"org.springframework.boot:spring-boot-starter-data-jpa",
     	"org.springframework.boot:spring-boot-starter-data-redis",
-    	"org.springframework.boot:spring-boot-starter-security"
+    	"org.springframework.boot:spring-boot-starter-security",
+    	"org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.2.RELEASE",
+    	"org.springframework.cloud:spring-cloud-starter-config:2.1.3.RELEASE",
+    	"org.springframework.session:spring-session-data-redis:2.1.8.RELEASE",
+    	"com.h2database:h2:1.4.199"
     )
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile(
+    	"org.springframework.boot:spring-boot-starter-test"
+    )
     compileOnly ("org.projectlombok:lombok:1.18.8")
 	annotationProcessor ("org.projectlombok:lombok:1.18.8")
 }
